--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,3 +42,9 @@ repos:
   rev: 1.7.4
   hooks:
     - id: bandit
+
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v0.960
+  hooks:
+    - id: mypy
+      additional_dependencies: [types-requests]
