--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.7"
 black = "^22.3.0"
 isort = "^5.10.1"
 pre-commit = "^2.19.0"
+types-requests = "^2.27.30"
 
 [tool.black]
 line-length = 120
@@ -29,6 +30,12 @@ exclude = '''
   | notes
 )/
 '''
+
+[mypy]
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+ignore_missing_imports = true
 
 [tool.isort]
 profile = "black"
