--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,6 +42,8 @@ repos:
   rev: 1.7.4
   hooks:
     - id: bandit
+      args: ["-c", "pyproject.toml"]
+      additional_dependencies: [ "bandit[toml]" ]
 
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v0.960
