--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ black = "^22.3.0"
 isort = "^5.10.1"
 pre-commit = "^2.19.0"
 types-requests = "^2.27.30"
+mypy = "^0.961"
+pytest = "^7.1.2"
+xmltodict = "^0.13.0"
 
 [tool.black]
 line-length = 120
@@ -31,16 +34,13 @@ exclude = '''
 )/
 '''
 
-[mypy]
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-ignore_missing_imports = true
-
 [tool.isort]
 profile = "black"
 line_length = 132
 skip_glob = [ "docs", "notes" ]
+
+[tool.bandit]
+exclude_dirs = ["tests"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
