--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -34,6 +34,6 @@ jobs:
         pip install poetry
     - name: Build and publish
       run: |
-        poetry version $(git describe --tags --abbrev=0)
+        poetry version $(python molskaten/utils.py)
         poetry build
         poetry publish --username __token__ --password ${{ secrets.PYPI_API_TOKEN }}
