--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,7 @@ exclude_dirs = ["tests"]
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.vulture]
+paths = ["molskaten"]
+min_confidence = 80
