--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ types-requests = "^2.27.30"
 mypy = "^0.961"
 pytest = "^7.1.2"
 xmltodict = "^0.13.0"
+coverage = {extras = ["toml"], version = "^6.4.1"}
+pytest-cov = "^3.0.0"
 
 [tool.black]
 line-length = 120
@@ -49,3 +51,8 @@ build-backend = "poetry.core.masonry.api"
 [tool.vulture]
 paths = ["molskaten"]
 min_confidence = 80
+
+[tool.coverage.report]
+skip_empty = true
+show_missing = true
+omit = ["tests/*"]
