--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/granis/skolmaten-python"
 
 [tool.poetry.dependencies]
 python = "^3.7"
+requests = "^2.28.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
