--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -28,6 +28,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.7'
+        cache: 'poetry'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
