--- a/.github/workflows/linting-check.yml
+++ b/.github/workflows/linting-check.yml
@@ -28,7 +28,7 @@ jobs:
           cache: 'pip'
       - run: python -m pip install flake8
       - name: flake8
-        uses: liskin/gh-problem-matcher-wrap@@v1.0.1
+        uses: liskin/gh-problem-matcher-wrap@v1.0.1
         with:
           linters: flake8
           run: flake8 --exclude dist
@@ -45,7 +45,7 @@ jobs:
           cache: 'pip'
       - run: python -m pip install isort
       - name: isort
-        uses: liskin/gh-problem-matcher-wrap@@v1.0.1
+        uses: liskin/gh-problem-matcher-wrap@v1.0.1
         with:
           linters: isort
           run: isort --check --diff molskaten tests
