chore: use the poetry-env for running pytest

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Install dependencies
         run: poetry install -q -n --no-root
       - name: Run pytest
-        run: python -m pytest
+        run: poetry run python -m pytest
