--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -25,12 +25,16 @@ jobs:
       with:
         fetch-depth: 0
     - name: Install poetry
-      run: pipx install poetry
+      uses: snok/install-poetry@v1.3.1
+      with:
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+        installer-parallel: true
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.7'
-        cache: 'poetry'
+#        cache: 'poetry' # skip cache when publishing
     - name: Install dependencies
       run: poetry install --no-root
     - name: Build and publish
