--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/granis/skolmaten-python"
 [tool.poetry.dependencies]
 python = "^3.7"
 requests = "^2.28.0"
-importlib-metadata = {version = "^4.12.0", python = "<3.8"}
+importlib-metadata = "^4.12.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
