--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -39,6 +39,7 @@ jobs:
       run: poetry install --no-root
     - name: Build and publish
       run: |
+        source $VENV
         poetry version $(python molskaten/utils.py)
         poetry build
         poetry publish --username __token__ --password ${{ secrets.PYPI_API_TOKEN }}
