--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -24,22 +24,28 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
+
     - name: Install poetry
       uses: snok/install-poetry@v1.3.1
       with:
         virtualenvs-create: true
         virtualenvs-in-project: true
         installer-parallel: true
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.7'
 #        cache: 'poetry' # skip cache when publishing
+
     - name: Install dependencies
       run: poetry install --no-root
-    - name: Build and publish
+    - name: Build
+      id: build
       run: |
-        source $VENV
-        poetry version $(python molskaten/utils.py)
         poetry build
+
+    - name: Publish
+      if: steps.build.outcome == 'success'
+      run: |
         poetry publish --username __token__ --password ${{ secrets.PYPI_API_TOKEN }}
