--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,12 @@ authors = ["granis <granis@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/granis/skolmaten-python"
 
+[tool.poetry-dynamic-versioning]
+enable = true
+vcs = "git"
+style = "pep440"
+dirty = "true"
+
 [tool.poetry.dependencies]
 python = "^3.7"
 requests = "^2.28.0"
@@ -47,7 +53,7 @@ skip_glob = [ "docs", "notes" ]
 exclude_dirs = ["tests"]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.vulture]
