--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Install poetry
       uses: snok/install-poetry@v1.3.1
       with:
+        version: 1.2.0b2
         virtualenvs-create: true
         virtualenvs-in-project: true
         installer-parallel: true
@@ -40,6 +41,11 @@ jobs:
 
     - name: Install dependencies
       run: poetry install --no-root
+
+    - name: Install poetry plugins
+      run: |
+        poetry self add poetry-dynamic-versioning-plugin@0.3.2
+
     - name: Build
       id: build
       run: |
