--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install poetry
       uses: snok/install-poetry@v1.3.3
       with:
-        version: 1.2.0b2
+        version: 1.3.2
         virtualenvs-create: true
         virtualenvs-in-project: true
         installer-parallel: true
@@ -44,7 +44,7 @@ jobs:
 
     - name: Install poetry plugins
       run: |
-        poetry self add poetry-dynamic-versioning-plugin@0.3.2
+        poetry self add "poetry-dynamic-versioning[plugin]"
 
     - name: Build
       id: build
