--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ dirty = "true"
 [tool.poetry.dependencies]
 python = "^3.7"
 requests = "^2.28.0"
-importlib-metadata = {version = "^4", python = "<3.8"}
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
@@ -54,7 +53,7 @@ exclude_dirs = ["tests"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
-build-backend = "poetry.core.masonry.api"
+build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.vulture]
 paths = ["molskaten"]
